--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Upload to NuGet
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        PACKAGE_NAME: ${{ format('Common.AsyncExtensions.{0}.nupkg', env.PACKAGE_VERSION) }}
+        PACKAGE_NAME: ${{ format('AsyncExtensions.{0}.nupkg', env.PACKAGE_VERSION) }}
       run: |
         dotnet nuget push ./output/$PACKAGE_NAME \
           -k "${NUGET_API_KEY}" \
